--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gatsby-plugin-google-analytics": "2.1.7",
     "gatsby-plugin-manifest": "2.2.5",
     "gatsby-plugin-netlify": "2.1.5",
+    "gatsby-plugin-netlify-cms": "^4.1.11",
     "gatsby-plugin-nprogress": "2.1.2",
     "gatsby-plugin-offline": "2.2.6",
     "gatsby-plugin-preact": "3.1.4",
@@ -27,7 +28,8 @@
     "gatsby-remark-smartypants": "2.1.2",
     "gatsby-source-filesystem": "2.1.9",
     "gatsby-transformer-remark": "2.6.14",
-    "gatsby-transformer-sharp": "2.2.6"
+    "gatsby-transformer-sharp": "2.2.6",
+    "netlify-cms-app": "^2.9.7"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-svg-core": "1.2.21",
